[package]
name = "pros"
version = "0.3.0-beta.1"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2021"

[lib]
name = "pros"
path = "src/lib.rs"

[dependencies]
bitflags = "1"
libc = { version = "0.2", default-features = false }
libc-print = "0.1"
math = { path = "./math" }
smallvec = { version = "1.7", features = ["const_new", "const_generics"]}
pros_macro = { path = "./macros"}

[build-dependencies]
bindgen = "0.59"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
