[package]
name = "pros"
version = "0.3.0-beta.1"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2021"

[lib]
name = "pros"
path = "src/lib.rs"

[dependencies]
bitflags = "2.3"
libc = { version = "0.2", default-features = false }
libc-print = "0.1"
pros-macros = { path = "./macros"}
pros-sys = { git = "https://github.com/serxka/pros-sys", tag = "pros-v3.8.0", features = ["global_allocator"] }
robot_algorithms = { git = "https://github.com/nonl4331/robot-algorithms" }
smallvec = { version = "1.7", features = ["const_new", "const_generics"]}
