[package]
name = "pros"
version = "0.3.0-beta.2"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2021"

[lib]
name = "pros"
path = "src/lib.rs"

[dependencies]
bitflags = "2.4"
libc = { version = "0.2", default-features = false }
libc-print = "0.1"
mint = "0.5"
pros-macros = { path = "./macros"}
pros-sys = { git = "https://github.com/serxka/pros-sys", tag = "pros-v3.8.2", features = ["global_allocator"] }
smallvec = { version = "1.11", features = ["const_new", "const_generics"]}
